--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
     "private": true,
     "name": "@solana/wallet-adapter-create-react-app-starter",
     "version": "0.1.0",
-    "dependencies": {
-        "@arweave-cdn/uploader": "^1.0.4",
-        "@solana/wallet-adapter-base": "^0.9.4",
-        "@solana/wallet-adapter-react": "^0.15.3",
-        "@solana/wallet-adapter-react-ui": "^0.9.5",
-        "@solana/wallet-adapter-wallets": "^0.16.0",
-        "@solana/web3.js": "^1.36.0",
-        "arweave": "^1.10.23",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "web-vitals": "^2.1.4"
-    },
+  "dependencies": {
+    "@arweave-cdn/uploader": "^1.0.4",
+    "@solana/wallet-adapter-base": "^0.9.4",
+    "@solana/wallet-adapter-react": "^0.15.3",
+    "@solana/wallet-adapter-react-ui": "^0.9.5",
+    "@solana/wallet-adapter-wallets": "^0.16.0",
+    "@solana/web3.js": "^1.36.0",
+    "arweave": "^1.10.23",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "web-vitals": "^2.1.4",
+    "@metaplex/js": "^4.10.1"
+  },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
